--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 <style>
     body{
-background-color: #8df7a9
+background-color: #8df7a9;
+font-family: Arial, Helvetica, sans-serif;
     } 
 </style>
 </head>
