--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@ font-family: Arial, Helvetica, sans-serif;
     <main>
         <h1> Nauka Gita </h1>
     </main>
+    <footer>
+        <p>Projekt WSB Merito Gdańsk 2024</p>
+    </footer>
 </body>
 </html>
